docs: update docs

--- a/.github/docs/m7.md
+++ b/.github/docs/m7.md
@@ -11,13 +11,13 @@ Uma plataforma online de educação, que consegue acompanhar a quantidade de hor
 ### Etapas
 
 <div>
-  <img src="../assets/images/m7/m7_01.png" width="75%"/>
+  <img alt="img com etapas da regressão linear simples" src="../assets/images/m7/m7_01.png" width="75%"/>
 </div>
 
-### Ilustração - Regressão Linear
+### Ilustração - Regressão Linear Simples
 
 <div>
-  <img src="../assets/images/m7/m7_02.png" width="75%"/>
+  <img alt="ilustração da lógica da regressão linear simples" src="../assets/images/m7/m7_02.png" width="75%"/>
 </div>
 
 > [voltar](./notes.md) para a página anterior
