--- a/.github/docs/m8.md
+++ b/.github/docs/m8.md
@@ -1,3 +1,23 @@
+<!-- markdownlint-disable MD033 -->
+
 # Módulo 8 - Regressão Linear Múltipla
+
+## Projeto
+
+### Descrição
+
+Um laboratório de análises clínicas que conduz testes de colesterol, deseja avaliar, com base em caracteríticas, dos pacientes, tais como idade, nível de atividade física, peso, dentre outras, se estas variáveis influenciam no resultado do exame de colesterol total. Para isso, iremos treinar um algoritimo de regressão linear múltipla, de forma que seja possível prever o resultado do exame de colesterol, dada as caracteríticas do paciente.
+
+### Etapas
+
+<div>
+  <img alt="img com etapas da regressão linear múltipla" src="../assets/images/m8/m8_02.png" width="75%"/>
+</div>
+
+### Ilustração - Regressão Linear Múltipla
+
+<div>
+  <img alt="" src="../assets/images/m8/m8_01.png" width="75%"/>
+</div>
 
 > [voltar](./notes.md) para a página anterior
