feat-docs: create notebook model and update docs

--- a/.github/docs/m8.md
+++ b/.github/docs/m8.md
@@ -20,4 +20,16 @@ Um laboratório de análises clínicas que conduz testes de colesterol, deseja a
   <img alt="" src="../assets/images/m8/m8_01.png" width="75%"/>
 </div>
 
+### Conceitos
+
+#### O que é **Bucketing**?
+
+Dentro do contexto de análise exploratória de dados, o termo "bucketing" refere-se à prática de agrupar valores em intervalos específicos, também conhecidos como "buckets" ou "bins". Esse processo é comumente utilizado para simplificar a análise de dados contínuos, tornando-a mais compreensível e interpretável.
+
+A aplicação do bucketing é especialmente útil quando se lida com variáveis numéricas contínuas que possuem uma ampla gama de valores. Ao agrupar esses valores em intervalos discretos, é possível obter uma visão mais clara de padrões, tendências e distribuições nos dados. Isso facilita a identificação de insights e padrões significativos.
+
+Por exemplo, imagine que você tenha um conjunto de dados contendo idades de uma população. Em vez de analisar cada idade individualmente, você pode criar buckets, como 0-10, 11-20, 21-30, e assim por diante. Isso permite visualizar a distribuição das idades de uma maneira mais fácil de entender, fornecendo uma visão geral das faixas etárias predominantes na população.
+
+O bucketing é comumente usado em combinação com gráficos de histograma, que representam a distribuição de frequências dos dados em cada intervalo. Essa técnica é valiosa para simplificar dados complexos e destacar padrões que podem não ser imediatamente evidentes ao examinar os valores brutos.
+
 > [voltar](./notes.md) para a página anterior
