--- a/notebooks/modelo_pontuacao.ipynb
+++ b/notebooks/modelo_pontuacao.ipynb
@@ -29,7 +29,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Carga dos Dados\n"
+    "### Carga dos Dados\n",
+    "\n"
    ]
   },
   {
@@ -142,14 +143,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Análise Exploratória de Dados\n"
+    "### Análise Exploratória de Dados\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Nesta aula, exploramos a Análise Exploratória de Dados (EDA) para um conjunto de dados que contém informações sobre horas de estudo e pontuação em um teste. Começamos analisando as medidas estatísticas das variáveis, como média, mediana e desvio padrão. Em seguida, utilizamos um gráfico de dispersão para visualizar a relação entre as variáveis. Observamos que há uma relação forte entre as horas de estudo e a pontuação no teste, mas não é uma relação linear perfeita. Também verificamos a presença de outliers usando um boxplot e constatamos que não há outliers nas horas de estudo ou na pontuação. Além disso, calculamos a correlação entre as variáveis e constatamos que há uma correlação forte entre elas. Por fim, analisamos a distribuição das variáveis usando histogramas e observamos que há uma concentração maior de dados acima de 40 horas de estudo. Com base nessas análises, concluímos que um modelo de regressão linear simples pode ser adequado para prever a pontuação no teste com base nas horas de estudo.\n"
+    "Nesta aula, exploramos a Análise Exploratória de Dados (EDA) para um conjunto de dados que contém informações sobre horas de estudo e pontuação em um teste. Começamos analisando as medidas estatísticas das variáveis, como média, mediana e desvio padrão. Em seguida, utilizamos um gráfico de dispersão para visualizar a relação entre as variáveis. Observamos que há uma relação forte entre as horas de estudo e a pontuação no teste, mas não é uma relação linear perfeita. Também verificamos a presença de outliers usando um boxplot e constatamos que não há outliers nas horas de estudo ou na pontuação. Além disso, calculamos a correlação entre as variáveis e constatamos que há uma correlação forte entre elas. Por fim, analisamos a distribuição das variáveis usando histogramas e observamos que há uma concentração maior de dados acima de 40 horas de estudo. Com base nessas análises, concluímos que um modelo de regressão linear simples pode ser adequado para prever a pontuação no teste com base nas horas de estudo.\n",
+    "\n"
    ]
   },
   {
@@ -441,14 +444,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Treinamento do Modelo\n"
+    "### Treinamento do Modelo\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Neste vídeo, começamos a preparar o modelo para ser treinado. A primeira etapa é dividir os dados entre treino e teste. Para isso, criamos duas estruturas para armazenar as variáveis independentes (X) e dependentes (Y). Em seguida, utilizamos a função `train_test_split()` para dividir o dataset em treino e teste, definindo que 30% dos dados serão usados para teste e 70% para treinamento. Após a divisão, instanciamos o modelo de regressão linear e treinamos o modelo utilizando o conjunto de treinamento. Por fim, imprimimos a equação da reta resultante, que representa a relação entre as variáveis X e Y.\n"
+    "Neste vídeo, começamos a preparar o modelo para ser treinado. A primeira etapa é dividir os dados entre treino e teste. Para isso, criamos duas estruturas para armazenar as variáveis independentes (X) e dependentes (Y). Em seguida, utilizamos a função `train_test_split()` para dividir o dataset em treino e teste, definindo que 30% dos dados serão usados para teste e 70% para treinamento. Após a divisão, instanciamos o modelo de regressão linear e treinamos o modelo utilizando o conjunto de treinamento. Por fim, imprimimos a equação da reta resultante, que representa a relação entre as variáveis X e Y.\n",
+    "\n"
    ]
   },
   {
@@ -527,21 +532,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Validação do Modelo\n"
+    "### Validação do Modelo\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Análise Métricas - MAE e MSE\n"
+    "#### Análise Métricas - MAE e MSE\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Nesta aula, vamos começar a validar o modelo que treinamos anteriormente. Faremos isso através de métricas e análise de resíduos. Primeiro, calcularemos os valores preditos com base no conjunto de testes para verificar se o modelo está fazendo boas previsões em dados não observados durante o treinamento. Usaremos métricas como R-squared, que mede a proporção da variação explicada pela variável independente, e Mean Absolute Error (MAE), que calcula a diferença média entre os valores preditos e os valores reais. O MAE é uma métrica fácil de interpretar e menos sensível a outliers. Vamos calcular essas métricas e interpretar os resultados.\n"
+    "Nesta aula, vamos começar a validar o modelo que treinamos anteriormente. Faremos isso através de métricas e análise de resíduos. Primeiro, calcularemos os valores preditos com base no conjunto de testes para verificar se o modelo está fazendo boas previsões em dados não observados durante o treinamento. Usaremos métricas como R-squared, que mede a proporção da variação explicada pela variável independente, e Mean Absolute Error (MAE), que calcula a diferença média entre os valores preditos e os valores reais. O MAE é uma métrica fácil de interpretar e menos sensível a outliers. Vamos calcular essas métricas e interpretar os resultados.\n",
+    "\n"
    ]
   },
   {
@@ -626,14 +634,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Análise Métricas - RMSE\n"
+    "#### Análise Métricas - RMSE\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Nesta aula, discutimos sobre métricas de avaliação de modelos de regressão. Apresentamos o conceito de RMSE (Root Mean Squared Error), que é uma métrica que penaliza os grandes erros, mas é fácil de interpretar. Explicamos que o cálculo do RMSE é semelhante ao MSE (Mean Squared Error), mas com a diferença de que é aplicada uma raiz quadrada no resultado. Demonstramos como calcular o RMSE e como interpretar seus valores. Em seguida, fizemos uma análise gráfica simples para visualizar os dados preditos e reais do conjunto de teste. Concluímos que é importante observar as diferenças entre os valores preditos e reais, tanto através das métricas quanto visualmente, para avaliar a performance do modelo.\n"
+    "Nesta aula, discutimos sobre métricas de avaliação de modelos de regressão. Apresentamos o conceito de RMSE (Root Mean Squared Error), que é uma métrica que penaliza os grandes erros, mas é fácil de interpretar. Explicamos que o cálculo do RMSE é semelhante ao MSE (Mean Squared Error), mas com a diferença de que é aplicada uma raiz quadrada no resultado. Demonstramos como calcular o RMSE e como interpretar seus valores. Em seguida, fizemos uma análise gráfica simples para visualizar os dados preditos e reais do conjunto de teste. Concluímos que é importante observar as diferenças entre os valores preditos e reais, tanto através das métricas quanto visualmente, para avaliar a performance do modelo.\n",
+    "\n"
    ]
   },
   {
@@ -680,10 +690,8 @@
     "x_axis = range(len(Y_test))\n",
     "plt.figure(figsize=(10, 6))\n",
     "# reshape = transforma os dados num array unidimensional\n",
-    "sns.scatterplot(x=x_axis, y=Y_test.reshape(-1),\n",
-    "                color=\"blue\", label=\"Valores Reais\")\n",
-    "sns.scatterplot(x=x_axis, y=Y_pred.reshape(-1),\n",
-    "                color=\"red\", label=\"Valores Preditos\")\n",
+    "sns.scatterplot(x=x_axis, y=Y_test.reshape(-1), color=\"blue\", label=\"Valores Reais\")\n",
+    "sns.scatterplot(x=x_axis, y=Y_pred.reshape(-1), color=\"red\", label=\"Valores Preditos\")\n",
     "plt.legend()\n",
     "plt.show()"
    ]
@@ -692,14 +700,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Análise Gráfica de Resíduos\n"
+    "#### Análise Gráfica de Resíduos\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Nesta aula, vamos realizar a análise de resíduos para validar nosso modelo de regressão. Os resíduos são os erros do modelo, ou seja, a diferença entre os valores reais e os valores previstos. Vamos calcular os resíduos e convertê-los para uma escala padronizada. Em seguida, faremos uma análise gráfica dos resíduos para verificar a linearidade e a homogeneidade das variâncias. Observamos que os resíduos não estão totalmente dentro do intervalo esperado para a linearidade e que há padrões nos dados, indicando que o modelo pode não ser adequado. Além disso, faremos testes estatísticos de normalidade nos resíduos.\n"
+    "Nesta aula, vamos realizar a análise de resíduos para validar nosso modelo de regressão. Os resíduos são os erros do modelo, ou seja, a diferença entre os valores reais e os valores previstos. Vamos calcular os resíduos e convertê-los para uma escala padronizada. Em seguida, faremos uma análise gráfica dos resíduos para verificar a linearidade e a homogeneidade das variâncias. Observamos que os resíduos não estão totalmente dentro do intervalo esperado para a linearidade e que há padrões nos dados, indicando que o modelo pode não ser adequado. Além disso, faremos testes estatísticos de normalidade nos resíduos.\n",
+    "\n"
    ]
   },
   {
@@ -733,7 +743,8 @@
     "\n",
     "**verificar homogeneidade das variâncias (Homocedasticidade)**\n",
     "\n",
-    "- valores estiverem em torno da reta, temo homocedasticidade, caso contrário se houver alguma tendência ou padrão (formam um cone ou funil), há heterocedasticidade.\n"
+    "- valores estiverem em torno da reta, temo homocedasticidade, caso contrário se houver alguma tendência ou padrão (formam um cone ou funil), há heterocedasticidade.\n",
+    "\n"
    ]
   },
   {
@@ -796,21 +807,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Pelo ponto de vista da análise gráfica dos resíduos, este modelo pode não satisfazer predições.\n"
+    "Pelo ponto de vista da análise gráfica dos resíduos, este modelo pode não satisfazer predições.\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Teste de Normalidade de Resíduos\n"
+    "#### Teste de Normalidade de Resíduos\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Nesta aula, discutimos sobre a importância da validação técnica e de negócio em modelos de regressão linear. Realizamos dois testes estatísticos de normalidade: o teste de Shapiro-Wilks e o teste de Kolmogorov-Smirnov. O teste de Shapiro-Wilks nos permite verificar se os resíduos do modelo seguem uma distribuição normal. Já o teste de Kolmogorov-Smirnov nos ajuda a validar se os resíduos seguem uma distribuição normal específica, como a distribuição normal. Analisamos os resultados desses testes, considerando o valor de p-valor. Se o p-valor for maior que 0.05, não rejeitamos a hipótese nula de que os resíduos seguem uma distribuição normal. Caso contrário, rejeitamos a hipótese nula. Discutimos também outras abordagens que podem ser utilizadas para melhorar o modelo, como a obtenção de mais dados e a utilização de validação cruzada com K-fold. Por fim, ressaltamos a importância de validar o modelo com especialistas no domínio do problema e considerar outras variáveis que possam explicar melhor os resultados.\n"
+    "Nesta aula, discutimos sobre a importância da validação técnica e de negócio em modelos de regressão linear. Realizamos dois testes estatísticos de normalidade: o teste de Shapiro-Wilks e o teste de Kolmogorov-Smirnov. O teste de Shapiro-Wilks nos permite verificar se os resíduos do modelo seguem uma distribuição normal. Já o teste de Kolmogorov-Smirnov nos ajuda a validar se os resíduos seguem uma distribuição normal específica, como a distribuição normal. Analisamos os resultados desses testes, considerando o valor de p-valor. Se o p-valor for maior que 0.05, não rejeitamos a hipótese nula de que os resíduos seguem uma distribuição normal. Caso contrário, rejeitamos a hipótese nula. Discutimos também outras abordagens que podem ser utilizadas para melhorar o modelo, como a obtenção de mais dados e a utilização de validação cruzada com K-fold. Por fim, ressaltamos a importância de validar o modelo com especialistas no domínio do problema e considerar outras variáveis que possam explicar melhor os resultados.\n",
+    "\n"
    ]
   },
   {
@@ -858,29 +872,31 @@
     "# H1 - não segue distribuição normal\n",
     "# se p-valor > 0.05 não rejeita H0, caso contrário, rejeitamos:\n",
     "stat_ks, p_value_ks = kstest(residues.reshape(-1), \"norm\")\n",
-    "print(\n",
-    "    \"Estatística do teste: {:.4f} e p-value: {:.10f}\".format(stat_ks, p_value_ks))"
+    "print(\"Estatística do teste: {:.4f} e p-value: {:.10f}\".format(stat_ks, p_value_ks))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "O teste de normalidade de Kolmogorov-Smirnov rejeita a distribuição normal, dentro deste universo amostral e do problema levantado. É possível que uma maior obtenção de dados seja necessária.\n"
+    "O teste de normalidade de Kolmogorov-Smirnov rejeita a distribuição normal, dentro deste universo amostral e do problema levantado. É possível que uma maior obtenção de dados seja necessária.\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Fazendo Predições\n"
+    "### Fazendo Predições\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Nesta aula, aprendemos como fazer predições com um modelo de regressão linear. Primeiro, calculamos a pontuação prevista para um determinado número de horas de estudo, usando o método predict do modelo. Em seguida, discutimos a importância de avaliar o erro das previsões e como isso pode afetar a tomada de decisões. Também exploramos como inverter a equação da reta para determinar quantas horas de estudo são necessárias para atingir uma determinada pontuação-alvo. Por fim, aprendemos a salvar o modelo treinado em um arquivo para uso posterior. No próximo vídeo, veremos como usar esse modelo salvo para fazer previsões através de uma API.\n"
+    "Nesta aula, aprendemos como fazer predições com um modelo de regressão linear. Primeiro, calculamos a pontuação prevista para um determinado número de horas de estudo, usando o método predict do modelo. Em seguida, discutimos a importância de avaliar o erro das previsões e como isso pode afetar a tomada de decisões. Também exploramos como inverter a equação da reta para determinar quantas horas de estudo são necessárias para atingir uma determinada pontuação-alvo. Por fim, aprendemos a salvar o modelo treinado em um arquivo para uso posterior. No próximo vídeo, veremos como usar esse modelo salvo para fazer previsões através de uma API.\n",
+    "\n"
    ]
   },
   {
@@ -932,7 +948,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Salvar modelo\n"
+    "### Salvar modelo\n",
+    "\n"
    ]
   },
   {
