feat: create multiple linear regression module from model prediction and validadion (notebook)

--- a/.github/docs/m8.md
+++ b/.github/docs/m8.md
@@ -32,4 +32,14 @@ Por exemplo, imagine que você tenha um conjunto de dados contendo idades de uma
 
 O bucketing é comumente usado em combinação com gráficos de histograma, que representam a distribuição de frequências dos dados em cada intervalo. Essa técnica é valiosa para simplificar dados complexos e destacar padrões que podem não ser imediatamente evidentes ao examinar os valores brutos.
 
+#### O que é Homocedasticidade?
+
+A homocedasticidade é um conceito estatístico que se refere à constância da variabilidade dos erros em um modelo de regressão ao longo de todas as diferentes valores da variável independente. Em termos mais simples, a homocedasticidade implica que a dispersão dos resíduos (diferenças entre os valores observados e os valores preditos pelo modelo) é constante em todos os níveis da variável explicativa.
+
+Em um modelo de regressão, a presença de homocedasticidade é importante porque sugere que a variabilidade dos erros é constante em todos os níveis da variável independente. Se a homocedasticidade não for atendida e houver heterocedasticidade (variabilidade dos erros que varia em diferentes níveis da variável independente), isso pode comprometer a validade estatística dos resultados da regressão.
+
+Para avaliar a homocedasticidade, os pesquisadores geralmente examinam gráficos de resíduos em relação às variáveis independentes. Se a dispersão dos resíduos aumenta ou diminui de maneira sistemática à medida que a variável independente aumenta, pode indicar a presença de heterocedasticidade.
+
+Em resumo, a homocedasticidade é uma suposição importante em modelos de regressão que influencia a precisão das estimativas e inferências derivadas desses modelos.
+
 > [voltar](./notes.md) para a página anterior
